@startuml class
!theme plain
skinparam classAttributeIconSize 0

title Suggestions - Domain

class Suggestion {
    +Id: Guid
    +OwnerUserId: Guid
    +Key: string
    +Body: string
    +PrimaryLabel: string
    +PrimaryActionType: string
    +PrimaryActionPayload: string
    +CreatedAt: DateTime
    +DismissedAt: DateTime?
}

class SuggestionDetector {
    +RunForUserAsync(userId)
    -DetectMeetTag(recent): Finding[]
    -DetectOwedReplies(): Finding[]
    -DetectSilentWarm(): Finding[]
}

class Finding {
    +Key: string
    +Body: string
    +PrimaryLabel: string
    +PrimaryActionType: string
    +PrimaryActionPayload: string
}

SuggestionDetector --> Finding
SuggestionDetector --> Suggestion

@enduml
